tests/rename/should_compile/T25983b.hs
{-# OPTIONS -Wdodgy-imports #-}

module T25983b where

import Prelude hiding (Bool(fld1,fld2))
